--- a/FallingBlockGame/FallingBlockGame.csproj
+++ b/FallingBlockGame/FallingBlockGame.csproj
@@ -35,10 +35,23 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Engine\Drawable2D.cs" />
+    <Compile Include="Engine\DrawableComponent.cs" />
     <Compile Include="FallingBlockGame.cs" />
     <Compile Include="Field.cs" />
+    <Compile Include="Engine\GameObject.cs" />
+    <Compile Include="Engine\GameStateManager.cs" />
+    <Compile Include="Engine\Graphics.cs" />
+    <Compile Include="Engine\IDrawable.cs" />
+    <Compile Include="Engine\IDrawableComponent.cs" />
+    <Compile Include="Engine\IGameObjectBuilder.cs" />
+    <Compile Include="Engine\IGameState.cs" />
+    <Compile Include="Engine\InputManager.cs" />
+    <Compile Include="Engine\PositionComponent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Engine\RenderManager.cs" />
+    <Compile Include="Engine\TextureAtlas.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
