--- a/FallingBlockGame/FallingBlockGame.csproj
+++ b/FallingBlockGame/FallingBlockGame.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Engine\IGameState.cs" />
     <Compile Include="Engine\InputManager.cs" />
     <Compile Include="Engine\PositionComponent.cs" />
+    <Compile Include="FieldGameObjectBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\RenderManager.cs" />
