--- a/FallingBlockGame/FallingBlockGame.csproj
+++ b/FallingBlockGame/FallingBlockGame.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Engine\InputManager.cs" />
     <Compile Include="Engine\PositionComponent.cs" />
     <Compile Include="FieldGameObjectBuilder.cs" />
+    <Compile Include="GameLogic.cs" />
     <Compile Include="GameplayState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
