--- a/FallingBlockGameContent/FallingBlockGameContent/FallingBlockGameContent.csproj
+++ b/FallingBlockGameContent/FallingBlockGameContent/FallingBlockGameContent.csproj
@@ -51,6 +51,11 @@
       <XnaReferenceType>Content</XnaReferenceType>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="test.spritefont">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Compile>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\XNA Game Studio\Microsoft.Xna.GameStudio.targets" />
   <!--
