--- a/FallingBlockGame/FallingBlockGame.csproj
+++ b/FallingBlockGame/FallingBlockGame.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Engine\DrawableComponent.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
+    <Compile Include="Engine\UI\Label.cs" />
     <Compile Include="FallingBlockGame.cs" />
     <Compile Include="Field.cs" />
     <Compile Include="Engine\GameObject.cs">
