--- a/FallingBlockGame/FallingBlockGame.csproj
+++ b/FallingBlockGame/FallingBlockGame.csproj
@@ -77,6 +77,7 @@
     <Compile Include="GameLogic.cs" />
     <Compile Include="GameOverState.cs" />
     <Compile Include="GameplayState.cs" />
+    <Compile Include="NextShapeGameObjectBuilder.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\RenderManager.cs">
