Add option to pause the game

--- a/FallingBlockGame/FallingBlockGame.csproj
+++ b/FallingBlockGame/FallingBlockGame.csproj
@@ -80,6 +80,7 @@
     <Compile Include="GameOverState.cs" />
     <Compile Include="GameplayState.cs" />
     <Compile Include="NextShapeGameObjectBuilder.cs" />
+    <Compile Include="PauseState.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Engine\RenderManager.cs">
